@@ -24,7 +24,6 @@ import static au.gov.digitalhealth.lingo.service.ProductSummaryService.TPUU_LABE
 import static au.gov.digitalhealth.lingo.service.ProductSummaryService.TP_LABEL;
 
 import au.csiro.snowstorm_client.model.SnowstormConcept;
-import au.csiro.snowstorm_client.model.SnowstormConceptMini;
 import au.csiro.snowstorm_client.model.SnowstormDescription;
 import au.gov.digitalhealth.lingo.AmtTestData;
 import au.gov.digitalhealth.lingo.LingoTestBase;
@@ -33,8 +32,11 @@ import au.gov.digitalhealth.lingo.configuration.model.enumeration.MappingType;
 import au.gov.digitalhealth.lingo.product.Node;
 import au.gov.digitalhealth.lingo.product.ProductSummary;
 import au.gov.digitalhealth.lingo.product.details.properties.ExternalIdentifier;
+import au.gov.digitalhealth.lingo.product.bulk.ProductUpdateCreationDetails;
+import au.gov.digitalhealth.lingo.product.details.properties.NonDefiningBase;
 import au.gov.digitalhealth.lingo.product.update.ProductDescriptionUpdateRequest;
 import au.gov.digitalhealth.lingo.product.update.ProductPropertiesUpdateRequest;
+import au.gov.digitalhealth.lingo.product.update.ProductUpdateRequest;
 import au.gov.digitalhealth.lingo.service.ProductUpdateService;
 import au.gov.digitalhealth.lingo.util.SnowstormDtoUtil;
 import au.gov.digitalhealth.tickets.helper.JsonReader;
@@ -51,7 +53,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ProblemDetail;
 
 class ProductControllerTest extends LingoTestBase {
 
@@ -129,100 +130,115 @@ class ProductControllerTest extends LingoTestBase {
     fsn.setTerm(newFsn);
     pt.setTerm(newPt);
 
-    ProductDescriptionUpdateRequest productDescriptionUpdateRequest =
-        new ProductDescriptionUpdateRequest(Set.of(fsn, pt), ticketResponse.getId());
-    SnowstormConceptMini updatedProduct =
-        getLingoTestClient()
-            .updateProductDescription(
-                productDescriptionUpdateRequest, existingConcept.getConceptId());
+    ProductUpdateRequest productUpdateRequest =
+        ProductUpdateRequest.builder()
+            .descriptionUpdate(
+                ProductDescriptionUpdateRequest.builder().descriptions(Set.of(fsn, pt)).build())
+            .conceptId(existingConcept.getConceptId())
+            .ticketId(ticketResponse.getId())
+            .build();
 
-    Assertions.assertThat(updatedProduct.getPt().getTerm()).isEqualTo(newPt);
-    Assertions.assertThat(updatedProduct.getFsn().getTerm()).isEqualTo(newFsn);
+    au.gov.digitalhealth.tickets.models.BulkProductAction updatedProduct =
+        getLingoTestClient().updateProduct(productUpdateRequest, existingConcept.getConceptId());
 
-    // Testing semantic tag check
-    fsn.setTerm(newPt);
+    ProductUpdateCreationDetails updatedProductDetails =
+        (ProductUpdateCreationDetails) updatedProduct.getDetails();
 
-    ProblemDetail problemDetail =
-        getLingoTestClient()
-            .putRequest(
-                "/api/MAIN/SNOMEDCT-AU/AUAMT/product-model/"
-                    + existingConcept.getConceptId()
-                    + "/descriptions",
-                new ProductDescriptionUpdateRequest(Set.of(fsn, pt), ticketResponse.getId()),
-                HttpStatus.BAD_REQUEST,
-                ProblemDetail.class);
-
-    Assertions.assertThat(problemDetail.getTitle()).isEqualTo("Atomic data validation problem");
-    Assertions.assertThat(problemDetail.getDetail())
-        .isEqualTo(
-            String.format(
-                "The required semantic tag \"(containerized branded product package)\" is missing from the FSN \"%s\".",
-                fsn.getTerm()));
-  }
-
-  @Test
-  void updateProductExternalIdentifiersTest() {
-    Ticket ticketResponse = getLingoTestClient().createTicket("Update Product Test");
-    ProductSummary productSummary =
-        getLingoTestClient().getProductModel(AmtTestData.EMLA_5_PERCENT_PATCH_20_CARTON);
-    Node existingCtpp = productSummary.getSubjects().iterator().next();
-
-    ProductPropertiesUpdateRequest productPropertiesUpdateRequest =
-        new ProductPropertiesUpdateRequest(
-            Set.of(
-                ExternalIdentifier.builder()
-                    .identifierScheme(ARTG_SCHEME)
-                    .value("123")
-                    .relationshipType(MappingType.RELATED)
-                    .build(),
-                ExternalIdentifier.builder()
-                    .identifierScheme(ARTG_SCHEME)
-                    .value("345")
-                    .relationshipType(MappingType.RELATED)
-                    .build()),
-            ticketResponse.getId());
-    Set<ExternalIdentifier> updatedExternalIdentifiers =
-        getLingoTestClient()
-            .updateProductProperties(productPropertiesUpdateRequest, existingCtpp.getConceptId());
-    Assertions.assertThat(updatedExternalIdentifiers).hasSize(2);
     Assertions.assertThat(
-            updatedExternalIdentifiers.stream().anyMatch(e -> e.getValue().equals("123")))
-        .isTrue();
-    Assertions.assertThat(
-            updatedExternalIdentifiers.stream().anyMatch(e -> e.getValue().equals("345")))
-        .isTrue();
+            updatedProductDetails.getUpdatedState().getConcept().getDescriptions().stream()
+                .filter(
+                    snowstormDescription -> {
+                      return snowstormDescription.getDescriptionId().equals(fsn.getDescriptionId());
+                    })
+                .findFirst()
+                .get()
+                .getTerm())
+        .isEqualTo(fsn.getTerm());
 
-    productPropertiesUpdateRequest =
-        new ProductPropertiesUpdateRequest(
-            Set.of(
-                ExternalIdentifier.builder()
-                    .identifierScheme(ARTG_SCHEME)
-                    .value("123")
-                    .relationshipType(MappingType.RELATED)
-                    .build(),
-                ExternalIdentifier.builder()
-                    .identifierScheme(ARTG_SCHEME)
-                    .value("222")
-                    .relationshipType(MappingType.RELATED)
-                    .build()),
-            ticketResponse.getId());
-    updatedExternalIdentifiers =
-        getLingoTestClient()
-            .updateProductProperties(productPropertiesUpdateRequest, existingCtpp.getConceptId());
-    Assertions.assertThat(updatedExternalIdentifiers).hasSize(2);
     Assertions.assertThat(
-            updatedExternalIdentifiers.stream().anyMatch(e -> e.getValue().equals("123")))
-        .isTrue();
-    Assertions.assertThat(
-            updatedExternalIdentifiers.stream().anyMatch(e -> e.getValue().equals("222")))
-        .isTrue();
+            updatedProductDetails.getUpdatedState().getConcept().getDescriptions().stream()
+                .filter(
+                    snowstormDescription -> {
+                      return snowstormDescription.getDescriptionId().equals(pt.getDescriptionId());
+                    })
+                .findFirst()
+                .get()
+                .getTerm())
+        .isEqualTo(pt.getTerm());
 
-    // Test for removing artg id
-    productPropertiesUpdateRequest =
-        new ProductPropertiesUpdateRequest(Collections.emptySet(), ticketResponse.getId());
-    updatedExternalIdentifiers =
-        getLingoTestClient()
-            .updateProductProperties(productPropertiesUpdateRequest, existingCtpp.getConceptId());
-    Assertions.assertThat(updatedExternalIdentifiers).isEmpty();
+    // fix so semantic tag error isnt thrown again
+
+    fsn.setTerm(newFsn);
+//  TODO: Move this so it uses the description route - the productPropertiesRoute is deleted
+//    ProductPropertiesUpdateRequest productPropertiesUpdateRequest =
+//        new ProductPropertiesUpdateRequest(
+//            Set.of(
+//                ExternalIdentifier.builder()
+//                    .identifierScheme(ARTG_SCHEME)
+//                    .value("123")
+//                    .relationshipType(MappingType.RELATED)
+//                    .build(),
+//                ExternalIdentifier.builder()
+//                    .identifierScheme(ARTG_SCHEME)
+//                    .value("345")
+//                    .relationshipType(MappingType.RELATED)
+//                    .build()));
+//
+//    au.gov.digitalhealth.tickets.models.BulkProductAction externalIdentifiersUpdated =
+//        getLingoTestClient()
+//            .putRequest(
+//                "/api/MAIN/SNOMEDCT-AU/AUAMT/product-model/"
+//                    + existingConcept.getConceptId()
+//                    + "/update",
+//                ProductUpdateRequest.builder()
+//                    .ticketId(ticketResponse.getId())
+//                    .conceptId(existingConcept.getConceptId())
+//                    .descriptionUpdate(
+//                        ProductDescriptionUpdateRequest.builder()
+//                            .descriptions(Set.of(fsn, pt))
+//                            .build())
+//                    .propertiesUpdateRequest(productPropertiesUpdateRequest)
+//                    .build(),
+//                HttpStatus.OK,
+//                au.gov.digitalhealth.tickets.models.BulkProductAction.class);
+//
+//    updatedProductDetails = (ProductUpdateCreationDetails) externalIdentifiersUpdated.getDetails();
+//
+//    Set<NonDefiningBase> newExternalIdentifiers =
+//        updatedProductDetails.getUpdatedState().getNonDefiningProperties();
+//
+//    Assertions.assertThat(newExternalIdentifiers.size()).isEqualTo(2);
+//    Assertions.assertThat(
+//            newExternalIdentifiers.stream().anyMatch(e -> e.getIdentifierValue().equals("123")))
+//        .isTrue();
+//    Assertions.assertThat(
+//            newExternalIdentifiers.stream().anyMatch(e -> e.getIdentifierValue().equals("345")))
+//        .isTrue();
+//
+//    productPropertiesUpdateRequest =
+//        new ProductPropertiesUpdateRequest(Collections.emptySet());
+//
+//    externalIdentifiersUpdated =
+//        getLingoTestClient()
+//            .putRequest(
+//                "/api/MAIN/SNOMEDCT-AU/AUAMT/product-model/"
+//                    + existingConcept.getConceptId()
+//                    + "/update",
+//                ProductUpdateRequest.builder()
+//                    .ticketId(ticketResponse.getId())
+//                    .conceptId(existingConcept.getConceptId())
+//                    .descriptionUpdate(
+//                        ProductDescriptionUpdateRequest.builder()
+//                            .descriptions(Set.of(fsn, pt))
+//                            .build())
+//                    .externalRequesterUpdate(productExternalIdentifierUpdateRequest)
+//                    .build(),
+//                HttpStatus.OK,
+//                au.gov.digitalhealth.tickets.models.BulkProductAction.class);
+//
+//    updatedProductDetails = (ProductUpdateCreationDetails) externalIdentifiersUpdated.getDetails();
+//
+//    newExternalIdentifiers = updatedProductDetails.getUpdatedState().getExternalIdentifiers();
+//    Assertions.assertThat(newExternalIdentifiers.size()).isEqualTo(0);
   }
 }
